1999-03-24  Bob Woodside <proteus@pcnet.com>

	* fvwm/add_window.c: Reuse FvwmWindow structure on Recapture.
	* fvwm/events.c: Ibid.
	* fvwm/fvwm.c: Ibid.
	* fvwm/fvwm.h: Ibid.
	* fvwm/misc.c: Ibid.
	* fvwm/misc.h: Ibid.

1999-03-23  Dan Espen  <dane@mk.bellcore.com>

	* libs/Parse.c (GetSuffixedIntegerArguments): Correctly initialize
	"suffixes" variable to correct a UMR detected by Purify.
	(DoPeekToken): Made tmptok static since its address is being returned.
	This is probably not the right way to fix this.
	(GetSuffixedIntegerArguments): Remove extra code from suffixlist change.

1999-03-23  Tomas Ogren  <stric@ing.umu.se>

	* libs/Parse.c (GetIntegerArguments): When chaining functions, please
	remember to pass along the return-value all the way out..

1999-03-22  Matthias Clasen <clasen@mathematik.uni-freiburg.de>

	* fvwm/add_window.c (LookInList): Initialize layer to 
	Scr.StaysPutLayer. This means that windows without
	any layer-setting style option (StaysOnTop/StaysPut/Layer)
	are put in the same layer as those with explicit StaysPut. 

1999-03-22  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/misc.c (GetMenuOptions): another try to fix the UMR

	* libs/Parse.c (GetSuffixedIntegerArguments): fixed UMR

	* fvwm/builtins.c (Maximize):
	(MaximizeHeight):
	(MaximizeWidth): applied patch for maximize (maximize until another
	window is hit).
	(Maximize): changed syntax: use 'grow' instead of '-1'

	* libs/fvwmlib.h:
	* libs/Parse.c (CmpToken): duplicate function removed (same as
	MatchToken)
	(DoGetNextToken): rewritten to use new DoPeekToken, SkipSpaces and
	CopyToken
	(MatchToken): use new DoPeekToken fuction
	(CopyToken): new function - use with care
	(SkipSpaces): new function
	(DoPeekToken): new function replaces PeekToken
	(SkipNTokens): use new PeekToken function
	(CheckNTokens): new function to check if there are N more tokens.

	* fvwm/menus.c (do_menu): fixed bug that caused menus to believe they
	were doubleclicked from title buttons
