@@ -72,18 +72,18 @@ struct config
 /* The first 13 items are mapped directly into the FvwmWindow structures
  * flag value, so they MUST correspond to the first 13 entries in fvwm.h */
 #define START_ICONIC_FLAG    (1<<0)
-#define STICKY_FLAG          (1<<1)
-#define LISTSKIP_FLAG        (1<<2)
-#define SUPPRESSICON_FLAG    (1<<3)
-#define NOICON_TITLE_FLAG    (1<<4)
-#define LENIENCE_FLAG        (1<<5)
-#define STICKY_ICON_FLAG     (1<<6)
-#define CIRCULATE_SKIP_ICON_FLAG  (1<<7)
-#define CIRCULATESKIP_FLAG   (1<<8)
-#define CLICK_FOCUS_FLAG     (1<<9)
-#define SLOPPY_FOCUS_FLAG    (1<<10)
-#define SHOW_MAPPING         (1<<11)
-#define GRAB_FOCUS           (1<<12)
+#define GRAB_FOCUS           (1<<1)
+#define STICKY_FLAG          (1<<2)
+#define LISTSKIP_FLAG        (1<<3)
+#define SUPPRESSICON_FLAG    (1<<4)
+#define NOICON_TITLE_FLAG    (1<<5)
+#define LENIENCE_FLAG        (1<<6)
+#define STICKY_ICON_FLAG     (1<<7)
+#define CIRCULATE_SKIP_ICON_FLAG  (1<<8)
+#define CIRCULATESKIP_FLAG   (1<<9)
+#define CLICK_FOCUS_FLAG     (1<<10)
+#define SLOPPY_FOCUS_FLAG    (1<<11)
+#define SHOW_MAPPING         (1<<12)
 
 #define NOTITLE_FLAG         (1<<13)
 #define NOBORDER_FLAG        (1<<14)
